# SimpleRayTracing

./: .gitignore  README.md
SimpleRayTracing/: SimpleRayTracing.sln
SimpleRayTracing/SimpleRayTracing/: .picasa.ini  CMakeLists.txt  SimpleRayTracing.cpp  SimpleRayTracing.vcxproj  SimpleRayTracing.vcxproj.filters
SimpleRayTracing/SimpleRayTracing/Builder/: World.cpp  World.h
SimpleRayTracing/SimpleRayTracing/Light/: AmbientLight.cpp  AmbientLight.h  AreaLight.cpp  AreaLight.h  Light.h  PointLight.cpp  PointLight.h
SimpleRayTracing/SimpleRayTracing/Material/: BRDF.h  Disney.cpp  Disney.h  DisneyBRDF.cpp  DisneyBRDF.h  Emissive.cpp  Emissive.h  Glossy.cpp  Glossy.h  Lambertian.h  Material.h  Matte.cpp  Matte.h  Specular.cpp  Specular.h
SimpleRayTracing/SimpleRayTracing/Math/: Constants.h  MathUtils.h  Matrix4.cpp  Matrix4.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
SimpleRayTracing/SimpleRayTracing/Object/: Box.cpp  Box.h  Composite.cpp  Composite.h  Grid.cpp  Grid.h  Instance.cpp  Instance.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Smoothtriangle.cpp  Smoothtriangle.h  Sphere.cpp  Triangle.cpp  Triangle.h  sphere.h
SimpleRayTracing/SimpleRayTracing/ObjectHandler/: Mesh.cpp  Mesh.h  OBJHandler.cpp  OBJHandler.h  Vertex.h
SimpleRayTracing/SimpleRayTracing/Utils/: Camera.cpp  Camera.h  EnvironmentTracer.cpp  EnvironmentTracer.h  Hit.h  RayTracer.cpp  RayTracer.h  Sampler.cpp  Sampler.h  WorldSettings.cpp  WorldSettings.h
SimpleRayTracing/SimpleRayTracing/pnglib/: pngwriter.cpp  pngwriter.h
(+12 files in other folders)
